Fixed alignment

--- a/TestCSSV2.css
+++ b/TestCSSV2.css
@@ -162,6 +162,7 @@ a:hover {
   width: auto;
   padding-right: .5rem;
 	padding-top: 1rem;
+  margin-left: -4rem;
 }
 
 .logo {
